[package]
name = "remeowte-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.30"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
lazy_static = "1.4"
http = "1.0"