[package]
name = "remeowte-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remeowte-http = {path = "../remeowte-http"}
axum = { version = "0.7.4", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.30"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
lazy_static = "1.4"
http = "1.0"
once_cell = "1.8.0"
clap = { version = "4.5.1", features = ["derive"] }
